# jax_lab

./: pyproject.toml
jax_ml/rl/environment/: bandit.py  tic_tac_toe.py
jax_ml/rl/q_learning/: Q.npy  q_learning_tictactoe.py
tests/rl_environment/: test_env_tictactoe.py
