[tool.poetry]
name = "jax-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.20"
jaxlib = "^0.4.20"
typing-extensions = "^4.8.0"
svgwrite = "^1.4.3"
pgx = "^2.0.1"
flax = "^0.7.5"
pytest = "^7.4.3"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
